basalt/src/snapshots/basalt_tui__toast__tests__info.snap
---
source: basalt/src/toast.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────┐          "
"│ ⓘ File saved                         │          "
"└──────────────────────────────────────┘          "
