basalt/src/snapshots/basalt_tui__toast__tests__long_message.snap
---
source: basalt/src/toast.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────┐          "
"│ ⓘ This is a really long message that │          "
"└──────────────────────────────────────┘          "
