basalt/src/snapshots/basalt_tui__toast__tests__no_level.snap
---
source: basalt/src/toast.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────┐          "
"│  Plain toast                         │          "
"└──────────────────────────────────────┘          "
