basalt/src/snapshots/basalt_tui__toast__tests__success.snap
---
source: basalt/src/toast.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────┐          "
"│ ✓ Operation complete                 │          "
"└──────────────────────────────────────┘          "
